# dify_plugin_client

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dify_plugin_client/: __init__.py  __main__.py  _compat.py  cli.py  exceptions.py  utils.py
src/dify_plugin_client/entities/: __init__.py  bundle.py  common.py  parameters.py  plugin.py  plugin_daemon.py  tools.py
src/dify_plugin_client/impl/: __init__.py  base.py  plugin.py
