[project]
name = "dify_plugin_client"
version = "0.0.1"
description = "A standalone client for interacting with a Dify plugin daemon."
readme = "README.md"
keywords = ["dify", "plugin", "client", "cli"]
authors = [{ name = "qieqie", email = "admin@qieqie.me" }]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic",
    "yarl",
    "packaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/qieqieplus/dify-plugin-client"

[project.scripts]
dify-plugin-client = "dify_plugin_client.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
